--- a/src/app/components/product-list/product-list-grid.component.html
+++ b/src/app/components/product-list/product-list-grid.component.html
@@ -5,8 +5,14 @@
                 <!-- loop over the collection of products -->
                 <div *ngFor="let tempProduct of products" class="col-md-3">
                     <div class="product-box">
-                        <img src="{{ tempProduct.imageUrl }}" class="img-responsive" />
-                        <h1>{{ tempProduct.name }}</h1>
+
+                        <a routerLink="/products/{{ tempProduct.id }}">
+                            <img src="{{ tempProduct.imageUrl }}" class="img-responsive" />
+                        </a>
+
+                        <a routerLink="/products/{{ tempProduct.id }}">
+                            <h1>{{ tempProduct.name }}</h1>
+                        </a>
 
                         <div class="price">{{ tempProduct.unitPrice | currency:'USD' }}</div>
 
@@ -18,6 +24,40 @@
                 <div *ngIf="products?.length == 0" class="alert alert-warning col-md-12" role="alert">
                     No products found!
                 </div>
+
+                <!-- footer begin -->
+
+                <div class="footer-pagination">
+                    <div class="row">
+                        <div class="col-md-6"></div>
+
+                        <div class="col-md-6">
+                            <div class="row">
+                                <div class="col-md-9" style="padding-left: 30%;">
+                                    <ngb-pagination [(page)]="thePageNumber" [pageSize]="thePageSize"
+                                        [collectionSize]="theTotalElements" [maxSize]="5" [boundaryLinks]="true"
+                                        (pageChange)="listProducts()">
+                                    </ngb-pagination>
+                                </div>
+
+                                <div class="col-md-3 mt-2" style="text-align: right;">
+                                    <span class="mr-2">Page Size</span>
+
+                                    <!-- (change)="updatePageSize($event.target.value)" -->
+                                    <select>
+                                        <option>2</option>
+                                        <option>5</option>
+                                        <option selected="true">10</option>
+                                        <option>20</option>
+                                    </select>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- footer end -->
+
             </div>
         </div>
     </div>
